--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,21 @@
 [package]
 name = "frakt"
-authors = ["James <jabib@myges.fr>", "Ronan <rkielt@myges.fr>", "Charles <ccretois@myges.fr>"]
+authors = ["James <jabib@myges.fr>", "Ronan <rkielt@myges.fr>", "Charles <ccretois@myges.fr>", "Samira <sseddar@myges.fr>"]
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "client"
+path = "client/src/main.rs"
 
-[dependencies]
-serde = { version = "1.0.189", features = ["derive"] }
-serde_json = "1.0.107"
-image = "0.24.7"
+[[bin]]
+name = "server"
+path = "server/src/main.rs"
+
+[workspace]
+members = [
+    "client",
+    "shared",
+    "server",
+    "complex",
+]
