fix(ci): Add build and test steps for client, complex, and shared
Added build and test steps for the client, complex, and shared directories in the Rust workflow. The build step uses `cargo build --verbose` command, while the test step uses `cargo test --verbose` command. Also added a step to list directory content using `ls -la` command.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build
+
+      - name: List directory content
+        run: ls -la
+
+      - name: Build client
+        working-directory: ./client
         run: cargo build --verbose
-      - name: Run tests
+
+      - name: Build complex
+        working-directory: ./complex
+        run: cargo build --verbose
+
+      - name: Build shared
+        working-directory: ./shared
+        run: cargo build --verbose
+
+      - name: Run tests for client
+        working-directory: ./client
+        run: cargo test --verbose
+
+      - name: Run tests for complex
+        working-directory: ./complex
+        run: cargo test --verbose
+
+      - name: Run tests for shared
+        working-directory: ./shared
         run: cargo test --verbose
