--- a/complex/Cargo.toml
+++ b/complex/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "complex"
 version = "0.1.0"
+authors = ["James <jabib@myges.fr>", "Ronan <rkielt@myges.fr>", "Charles <ccretois@myges.fr>", "Samira <sseddar@myges.fr>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
