--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,windows,macos,visualstudiocode,intellij+all
+
+.vscode/
