--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 image = { version = "0.24.7", features = [] }
 complex = { path = "../complex" }
 shared = { path = "../shared" }
+server = { path = "../server" }
