feat(server): Add server functionality and handle client connections
- Added `operation.rs` to define the server's parsing logic for command line arguments
- Created `CliServerArgs` struct to parse server-specific command line arguments
- Updated `CliArgs` enum to include both client and server argument variants
- Modified `main.rs` in the client module to use `CliClientArgs` instead of `CliArgs`
- Added new files: `main.rs`, `server_runner.rs`, and updated the mod file in the services directory for the server module
- Implemented basic server functionality in `main.rs` and added a function to handle incoming client connections in `handler.rs`
- Created a new function, `run_server`, in the services directory to start the server and listen for incoming connections

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 complex = { path = "../complex" }
 shared = { path = "../shared" }
+cli = { path = "../cli" }
 
 [lib]
 path = "src/lib.rs"
