--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 complex = { path = "../complex" }
 shared = { path = "../shared" }
 cli = { path = "../cli" }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json ="1.0.108"
 
 [lib]
 path = "src/lib.rs"
