--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -10,6 +10,8 @@ path = "src/lib.rs"
 
 [dependencies]
 rand = "0.8.5"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json ="1.0.108"
 
 [dev-dependencies]
 tempfile = "3.8.1"
