--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ shared = { path = "../shared" }
 cli = { path = "../cli" }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json ="1.0.108"
+log = "0.4.20"
 
 [lib]
 path = "src/lib.rs"
