--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -12,6 +12,8 @@ path = "src/lib.rs"
 rand = "0.8.5"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json ="1.0.108"
+env_logger = "0.10.1"  
+log = "0.4.20"
 
 [dev-dependencies]
 tempfile = "3.8.1"
