fix: write function is sending total size and json size encoded in BigEndian

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 complex = { path = "../complex" }
 shared = { path = "../shared" }
 cli = { path = "../cli" }
+byteorder = "1.4.3"
 
 [lib]
 path = "src/lib.rs"
