--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -12,8 +12,9 @@ path = "src/lib.rs"
 rand = "0.8.5"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json ="1.0.108"
-env_logger = "0.10.1"
+env_logger = "0.11.0"
 log = "0.4.20"
+toml = "0.8.8"
 image = { version = "0.24.7", features = [] }
 
 [dev-dependencies]
