--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - master
       - develop
+    tags:
+      - '*'  
   pull_request:
     branches:
-      - master
       - develop
-
 env:
   CARGO_TERM_COLOR: always
 
