--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches:
       - develop
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -41,6 +42,9 @@ jobs:
   publish_release:
     needs: build
     runs-on: ubuntu-latest
+    permissions: 
+      contents: write
+      issues: read
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v3
