--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v3
         with:
-          path: artifacts
+          path: artifacts/
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -62,21 +62,58 @@ jobs:
           release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
-      - name: Upload Release Asset
+      - name: Upload macOS Client Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/client-${{ matrix.os }}
-          asset_name: client-${{ matrix.os }}.zip
+          asset_path: ./artifacts/client-macos-latest/client
+          asset_name: client-macos-latest.zip
           asset_content_type: application/zip
-      - name: Upload Release Asset
+      - name: Upload Ubuntu Client Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/server-${{ matrix.os }}
-          asset_name: server-${{ matrix.os }}.zip
+          asset_path: ./artifacts/client-ubuntu-latest/client
+          asset_name: client-ubuntu-latest.zip
           asset_content_type: application/zip
+      - name: Upload Windows Client Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/client-windows-latest/client.exe
+          asset_name: client-windows-latest.zip
+          asset_content_type: application/zip
+      - name: Upload macOS Server Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/server-macos-latest/server
+          asset_name: server-macos-latest.zip
+          asset_content_type: application/zip
+      - name: Upload Ubuntu Server Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/server-ubuntu-latest/server
+          asset_name: server-ubuntu-latest.zip
+          asset_content_type: application/zip
+      - name: Upload Windows Server Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifacts/server-windows-latest/server.exe
+          asset_name: server-windows-latest.zip
+          asset_content_type: application/zip
+      
