--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,10 +9,13 @@ edition = "2021"
 [dependencies]
 complex = { path = "../complex" }
 shared = { path = "../shared" }
+gui = { path = "../gui" }
+
 cli = { path = "../cli" }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json ="1.0.108"
 log = "0.4.20"
+tokio = { version = "1", features = ["full"] }
 
 [lib]
 path = "src/lib.rs"
