--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+gtk = "0.18.1"
+gio = "0.19.2"
 pixels = "0.10.0"
 winit = "0.26.0"
 image = "0.24.9"
-
 
 [lib]
 path = "src/lib.rs"
