--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+image = "0.24.9"
+shared = { path = "../shared" }
+
+[target.'cfg(linux)'.dependencies]
 gtk = "0.18.1"
 gio = "0.19.2"
-pixels = "0.10.0"
+
+[target.'cfg(windows)'.dependencies]
 winit = "0.26.0"
-image = "0.24.9"
+pixels = "0.10.0"
 
 [lib]
 path = "src/lib.rs"
